<resources xmlns:tools="http://schemas.android.com/tools"  tools:ignore="TypographyEllipsis">
    <string name="app_name">GoMechanic</string>
    <string name="app_description">Best Car Service &amp; Car Repair App</string>
    <string name="default_notification_channel_id" translatable="false">1001</string>
    <string name="support_chat_notification_channel_id" translatable="false">1002</string>
    <string name="facebook_app_id" translatable="false">568442337150102</string>
    <string name="branch_key_live" translatable="false">key_live_amtaxekJmGh7V73bIDQrvpoastc29ftq</string>
    <string name="branch_key_test" translatable="false">key_test_cprcBkdVoKe1QW9gTrSC3ilarDn7YmtK</string>
    <string name="true_caller_key" translatable="false">r2YMV9c26e0e0231743d08e78fb82e9f3cbdb</string>
    <string name="true_caller_key_test" translatable="false">3ZqWPaba37dd8847f47d68e9817a7ff4a05bb</string>
    <string name="ravi_true_caller_key_test" translatable="false">UdWfdd56eb221786e45549ab32c0a255e5b96</string>
    <string name="razor_pay_test" translatable="false">rzp_test_Bx5e0VfW1Qj3jY</string>
    <string name="razor_pay_live" translatable="false">rzp_live_rkKuzLuLAR5IaQ</string>
    <string-array name="tyre_brand_array">
        <item>Apollo</item>
        <item>Bridgestone</item>
        <item>Ceat</item>
        <item>JK</item>
        <item>GoodYear</item>
        <item>MRF</item>
        <item>Michelin</item>
    </string-array>
    <string-array name="tyre_size_array">
        <item>145/80 R13</item>
        <item>155/80 R13</item>
        <item>165/70 R14</item>
        <item>175/65 R14</item>
        <item>185/65 R15</item>
        <item>195/55 R16</item>
        <item>205/65 R16</item>
        <item>215/65 R16</item>
        <item>235/65 R17</item>
    </string-array>
    <string-array name="custom_issue_array">
        <item>AC Not Cooling Enough</item>
        <item>Noise in AC System</item>
        <item>Low Air Flow</item>
        <item>Ac gas Leakage</item>
    </string-array>
    <string-array name="parts_replacement_array">
        <item>Compressor Replacement</item>
        <item>Condenser Replacement</item>
        <item>New Complete AC Unit</item>
        <item>New AC Panel Parts</item>
    </string-array>
    <string-array name="obd_map_array">
        <item>Speed Map</item>
        <item>Driving Map</item>
    </string-array>
    <string-array name="fact_array">
        <item>Cars spend 95% of their life parked</item>
        <item>The inventor of Cruise Control was blind</item>
        <item>Volvo invented the 3-point seat belt</item>
        <item>The Wheel was invented around 3500 BCE</item>
        <item>Charles Goodyear was not the founder of Goodyear Tires</item>
        <item>Car Recycling Is 16th largest industry in the world</item>
        <item>The average car contains around 24 kgs of copper wiring</item>
        <item>The first car accident happened in 1891</item>
        <item>The odds of dying in a car accident is 1 in 5,000</item>
        <item>Most people will be in a car crash once every 18 years</item>
        <item>A single car has about 30,000 parts. About 80% of a car is recyclable</item>
        <item>Volvo is Latin for <b>I roll.</b> Do you roll in a Volvo?</item>
        <item>A car is stolen in India every 45 seconds.</item>
        <item>Toyota has sold over 30 million Corollas in its lifetime</item>
        <item>There are more cars than people in Delhi</item>
        <item>The first electric traffic lights were launched in 1927</item>
        <item>Toyota produces 13,000 cars each day</item>
        <item><b>Hyundai</b> means <b>the present age</b> or <b>modernity</b> in Korean</item>
        <item>An average Indian spends about 38 hours/year in traffic</item>
        <item>The first windshield wipers were hand-operated</item>
        <item>The first cars had levers instead of steering wheels</item>
        <item>It takes 0.5ml of fuel to start a car</item>
        <item>65% of all Rolls-Royce cars ever built are still on the road</item>
        <item>In 1941, Henry Ford made a <b>Soybean Car.</b> No, it wasn\’t edible.</item>
        <item>1 in 4 chance that a car accident in India involves a cell phone</item>
        <item>65% of the world\’s population drives on the right side of the road.</item>
        <item>White is the world\’s most favorite car color.</item>
        <item>Indian made cars are delivered to buyers with an average 24 defects a unit</item>
        <item>A new car smell is actually toxic</item>
        <item>The world\'s first speeding ticket was issued in 1902.</item>
        <item>India\’s first indigenous car was the Tata Indica</item>
        <item>Jamshedji Tata became the first Indian to own a car.</item>
        <item>Atleast 2 Maruti Suzuki cars are sold every minute!</item>
        <item>Out of ten Renault cars sold in India, 9 are Dusters</item>
        <item>First motorsport event in India took place at the Sholavaram track in Chennai</item>
        <item>The Honda Accord was India\’s first true large luxury sedan.</item>
        <item>Fiat 1.3L Multijet engine powered 13 models in India until BS6 arrived.</item>
        <item>Maruti Suzuki sells an average 1.73 million cars every year</item>
        <item>India is expected to become a leader in shared mobility by 2030</item>
        <item>The automobile industry contributes to 7.1% of India\'s GDP.</item>
        <item>Every second car sold in India is a Maruti Suzuki</item>
        <item>Premier Padmini used to have a waiting period of 10 years</item>
        <item>Maruti\'s 1.3L MJD is the <b>national engine of India</b></item>
        <item>Fiat Uno is the most booked car in India till date</item>
        <item>Average Traffic Speed in Capital City Delhi is not more than 15 Kmph</item>
        <item>India is the sixth largest producer of automobiles in the world</item>
        <item>Benz and Mercedes were competitors until 1920</item>
        <item><b>Mercedes</b> was adopted from the name of a customer\’s daughter <b>Mercedes Jellinek</b>.</item>
    </string-array>
    <string name="place_holder_text">Place Holder</string>
    <string name="skip">SKIP</string>
    <string name="next">Next</string>
    <string name="go_mechanic_title">GoMechanic</string>
    <string name="select_your_car">Select your car</string>
    <string name="select_fuel_type">Select Fuel Type</string>
    <string name="select_your_city">Select your city</string>
    <string name="rate_us">Rate Us</string>
    <string name="rate_on_playstore">Glad you loved the GoMechanic Experience! Would you like rate us on Playstore? </string>
    <string name="fuel_type_petrol">Petrol</string>
    <string name="fuel_type_diesel">Diesel</string>
    <string name="your_otp_for">Your OTP for the order is</string>
    <string name="hows_your_driving">How’s Your Driving?</string>
    <string name="fuel_type_cng">Cng</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="driver_rating_aviable_after">Driver Ratings available after driving 1000kms</string>
    <string name="remove_from_cart">Remove From Cart</string>
    <string name="demo_text" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="transition_name_service_title" translatable="false">service_title</string>
    <string name="transition_name_service_image" translatable="false">service_image</string>
    <string name="transition_name_service_description" translatable="false">service_description</string>
    <string name="transition_name_service_discount" translatable="false">service_discount</string>
    <string name="transition_name_service_price" translatable="false">service_price</string>
    <string name="transition_name_service_net_price" translatable="false">service_net_price</string>
    <string name="subheading_important_note">For Repair services final pricing may vary based upon inspection</string>
    <string name="pay_now">Pay Now</string>
    <string name="add_cart">ADD TO CART</string>
    <string name="rate_card">View Rate Card</string>
    <string name="select_type">Select Engine oil</string>
    <string name="my_cart">My Cart</string>
    <string name="coupon">Coupon</string>
    <string name="select_date">Select Date of Service</string>
    <string name="select_time">Select Preferred Time</string>
    <string name="select_service_type">Select Arrival Mode</string>
    <string name="pickup">Pickup</string>
    <string name="tell_us_more">Tell us more about your Experience</string>
    <string name="want_your_car_to_be_pickup">Want your car to be picked up?</string>
    <string name="i_ll_drop_car_by_myself">I\'ll drop car by myself</string>
    <string name="self_drop">Self Drop</string>
    <string name="on_going">ONGOING</string>
    <string name="no_on_going_orders">No ongoing orders</string>
    <string name="book_now">BOOK NOW</string>
    <string name="for_any_assistance">FOR ANY ASSISTANCE</string>
    <string name="you_can_place_your_order_now">You can place your order now</string>
    <string name="need_help_with">Need help with previous orders?</string>
    <string name="you_have_rated">You have rated </string>
    <string name="help_with_ongoing">HELP WITH ONGOING ORDER </string>
    <string name="very_bad">VERY BAD</string>
    <string name="top_categories">Top Categories</string>
    <string name="star_products">Star Products</string>
    <string name="submit_feedback">SUBMIT FEEDBACK</string>
    <string name="tell_us_what">Tell us what went wrong</string>
    <string name="hey_there">Hey there, night owl. You\'re still up!</string>
    <string name="how_can">How can we help?</string>
    <string name="better_service">Your feedback will help us delivering better service in the future.</string>
    <string name="escalation_text">Create an Escalation Ticket?</string>
    <string name="rate_work_shop">3M Workshop</string>
    <string name="rate_your_car">Rate your car servicing experience\n with the GoMechanic</string>
    <string name="rate_our_service">Rate our services</string>
    <string name="escalation_id">Escalation ID : %s (%s)</string>
    <string name="rate_your_service">Rate your services</string>
    <string name="enter_mobile_number">Enter 10 digits Mobile Number</string>
    <string name="number_digit">9388893888</string>
    <string name="question1">ENTER REGISTRATION YEAR</string>
    <string name="question2">ENTER YOUR FULL NAME</string>
    <string name="enter_ur_mobile_number">Enter your mobile number</string>
    <string name="continue_text">Continue</string>
    <string name="get_otp">Get OTP</string>
    <string name="send_again">Send Again</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="gomac_guarantee">GoMechanic Guarantee</string>
    <string name="set_range">Set Range</string>
    <string name="sms_verification_text">We have sent a 4 digit OTP on</string>
    <string name="sms_verification_text2">EDIT</string>
    <string name="sms_verification_text3">Enter the OTP below to verify your number.</string>
    <string name="resend_otp_ts">Resend OTP in %ds</string>
    <string name="phone_number_message">Please enter 10 digits mobile number</string>
    <string name="car_verify_text">A car already exists with the given registration number</string>
    <string name="material_calendar_monday">Mo</string>
    <string name="material_calendar_tuesday">Tu</string>
    <string name="material_calendar_wednesday">We</string>
    <string name="material_calendar_thursday">Th</string>
    <string name="material_calendar_friday">Fr</string>
    <string name="material_calendar_saturday">Sa</string>
    <string name="material_calendar_sunday">Su</string>
    <string name="daily_text">Daily</string>
    <string name="weekly_text">Weekly</string>
    <string name="monthly_text">Monthly</string>
</resources>