<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/parentView"
    android:paddingBottom="@dimen/dp_16"
    android:background="@android:color/white"
    android:orientation="vertical">

    <!-- date toolbar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calendarHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingStart="@dimen/dp_8"
        android:paddingTop="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_8"
        android:paddingBottom="@dimen/dp_16">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/previousButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_keyboard_arrow_right_red" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/forwardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dp_8"
            android:paddingTop="@dimen/dp_8"
            android:paddingBottom="@dimen/dp_8"
            android:paddingEnd="@dimen/dp_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_keyboard_arrow_left_red" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/currentDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/museosans700"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toBottomOf="@+id/forwardButton"
            app:layout_constraintLeft_toRightOf="@id/previousButton"
            app:layout_constraintRight_toLeftOf="@id/forwardButton"
            app:layout_constraintTop_toTopOf="@+id/forwardButton"
            tools:text="February 2021" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Calender View -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_8"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/llCalenderSelectionTypes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDailyTextCV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/museosans500"
                android:gravity="center"
                android:text="@string/daily_text"
                android:padding="@dimen/dp_8"
                android:drawablePadding="@dimen/dp_4"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/sp_14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/dividerCalendar"
                app:layout_constraintBottom_toTopOf="@+id/tvWeeklyTextCV"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWeeklyTextCV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/museosans500"
                android:gravity="center"
                android:text="@string/weekly_text"
                android:padding="@dimen/dp_8"
                android:drawablePadding="@dimen/dp_4"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/sp_14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/dividerCalendar"
                app:layout_constraintBottom_toTopOf="@+id/tvMonthlyTextCV"
                app:layout_constraintTop_toBottomOf="@+id/tvDailyTextCV" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMonthlyTextCV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/museosans500"
                android:gravity="center"
                android:padding="@dimen/dp_8"
                android:drawablePadding="@dimen/dp_4"
                android:text="@string/monthly_text"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/sp_14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/dividerCalendar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWeeklyTextCV" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/dividerCalendar"
                android:layout_width="@dimen/dp_2"
                android:layout_height="0dp"
                android:background="@color/divider_grey"
                android:visibility="gone"
                android:layout_marginEnd="@dimen/dp_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvDailyTextCV"
                app:layout_constraintBottom_toBottomOf="@+id/tvMonthlyTextCV" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/llCalenderView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/abbreviationsBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mondayLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/museosans700"
                    android:gravity="center_horizontal"
                    android:text="@string/material_calendar_monday"
                    android:textColor="@color/calendarWeekDaysColor"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/tuesdayLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/museosans700"
                    android:gravity="center_horizontal"
                    android:text="@string/material_calendar_tuesday"
                    android:textColor="@color/calendarWeekDaysColor"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/wednesdayLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/museosans700"
                    android:gravity="center_horizontal"
                    android:text="@string/material_calendar_wednesday"
                    android:textColor="@color/calendarWeekDaysColor"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/thursdayLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/museosans700"
                    android:gravity="center_horizontal"
                    android:text="@string/material_calendar_thursday"
                    android:textColor="@color/calendarWeekDaysColor"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/fridayLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/museosans700"
                    android:gravity="center_horizontal"
                    android:text="@string/material_calendar_friday"
                    android:textColor="@color/calendarWeekDaysColor"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/saturdayLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/museosans700"
                    android:gravity="center_horizontal"
                    android:text="@string/material_calendar_saturday"
                    android:textColor="@color/calendarWeekDaysColor"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/sundayLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/museosans700"
                    android:gravity="center_horizontal"
                    android:text="@string/material_calendar_sunday"
                    android:textColor="@color/calendarWeekDaysColor"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_8">

                <com.himanshu24yadav.cali.calendarView.extensions.CalendarViewPager
                    android:id="@+id/calendarViewPager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </ScrollView>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>